cluster/apps/networking-system/ingresses/base/vaultwarden/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: dashboard-headers
      services:
        - name: vaultwarden
          port: 80
          namespace: default
    - kind: Rule
      match: Host(`vault.${SECRET_DOMAIN_0}`) && Path(`/notifications/hub`)
      middlewares:
        - name: dashboard-headers
      services:
        - name: vaultwarden
          port: 3012
          namespace: default
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
